--- a/public/home.ejs
+++ b/public/home.ejs
@@ -6,15 +6,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style2.css"/>
     <script src="js/jquery.min.js" ></script>
+    <script type="text/javascript">
+        function logout(){location.href='/login'}
+    </script>
 </head>
 <body>
     <div class="container-fluid">
         <h1>File Management System</h1>
         <div class="container-fluid">
-            <p><i>Welcome <b>User</b></i></p>
+            <p><i>Welcome <b><%= username%></b></i></p>
             <div class="btn-group ">
                 <button type="button" class="btn btn-primary">Home</button>
-                <button type="button" class="btn btn-primary">Logout</button>
+                <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
             </div>
         </div>
     </div>
