--- a/public/home.ejs
+++ b/public/home.ejs
@@ -25,7 +25,7 @@
     <div class="container-fluid">
         <button type="button" class="btn btn-primary disabled">Upload File</button>
         <button type="button" class="btn btn-primary disabled">Create File</button>
-        <button type="button" class="btn btn-primary">Create Folder</button>
+        <button type="button" class="btn btn-primary" onclick= "window.location.href = 'create_folder.html'">Create Folder</button>
     </div>
     <hr>
     <div class="container-fluid">
