Fixed all links

--- a/public/create_folder.ejs
+++ b/public/create_folder.ejs
@@ -27,7 +27,7 @@
   <div class="container-fluid">
     <p><i>Welcome <b>User</b></i></p>
     <div class="btn-group ">
-      <button type="button" class="btn btn-primary" onclick= "window.location.href= 'home.html'">Home</button>
+      <button type="button" class="btn btn-primary" onclick= "window.location.href= 'home.ejs'"> Home </button>
       <button type="button" class="btn btn-primary">Logout</button>
     </div>
   </div>
