--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <title>EBPC Document Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="style2.css"/>
-    <script src="js/jquery.min.js" ></script>
-    <script type="text/javascript">
-        function logout(){location.href='/login'}
-    </script>
+    <link rel="stylesheet" href="/css/style2.css"/>
+    <script type="text/javascript" src="/js/index.js"></script>
 </head>
 <body>
     <div class="container-fluid">
         <h1>File Management System</h1>
         <div class="container-fluid">
-            <p><i>Welcome <b><%= username%></b></i></p>
+            <p><i>Welcome <b>{{userName}}</b></i></p>
             <div class="btn-group ">
-                <button type="button" class="btn btn-primary">Home</button>
+                <button type="button" class="btn btn-primary" onclick="home()">Home</button>
                 <button type="button" class="btn btn-primary" onclick="logout()">Logout</button>
             </div>
         </div>
@@ -30,19 +27,8 @@
     <hr>
     <div class="container-fluid">
         <h3>/Evidence_Base_Police_Files</h3>
-            <div class="row text-center">
-                <div id="file-container" class="col">
-                    <img class="img-responsive" src="./img/folder.png" alt="Folder 1" width="200px"><br>
-                    <p>Folder 1</p>
-                </div>
-                <div id="file-container" class="col">
-                    <img class="img-responsive" src="./img/folder.png" alt="Folder 2" width="200px"><br>
-                    <p>Folder 2</p>
-                </div>
-                <div id="file-container" class="col">
-                    <img class="img-responsive" src="./img/folder.png" alt="Folder 3" width="200px"><br>
-                    <p>Folder 3</p>
-                </div>
+            <div class="row text-center" id="folder-container">
+               {{{body}}}
             </div>
     </div>
 </body>
