--- a/views/create_folder.hbs
+++ b/views/create_folder.hbs
@@ -6,19 +6,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="style2.css"/>
   <script src="js/jquery.min.js" ></script>
-  <script type="text/javascript">
-  function home(){location.href='/'}
-  function logout(){location.href='/login'}
-  </script>
+  <script type="text/javascript" src="/js/index.js"></script>
 </head>
 <body>
 <div class="container-fluid">
   <h1>File Management System</h1>
   <div class="container-fluid">
-    <p><i>Welcome <b><%= username%></b></i></p>
+    <p><i>Welcome <b>{{userName}}</b></i></p>
     <div class="btn-group ">
       <button type="button" class="btn btn-primary" onclick= home() > Home </button>
-      <button type="button" class="btn btn-primary" onclick = "logout()" >Logout</button>
+      <button type="button" class="btn btn-primary" onclick = logout() >Logout</button>
     </div>
   </div>
 </div>
@@ -26,6 +23,7 @@
 <div class="container-fluid">
   <button type="button" class="btn btn-primary disabled">Upload File</button>
   <button type="button" class="btn btn-primary disabled">Create File</button>
+  <button type="button" class="btn btn-primary disabled" >Create Folder</button>
 
 
 </div>
@@ -43,8 +41,7 @@
     <input type="text" id="folder_description" name="folder_description" maxlength="180" size= "50"><br>
     <br>
     <br>
-    <button type="button" class="btn btn-primary" onclick= myFunction() > Create Folder </button>
-    <script src="makeFolder.js"></script>
+    <button type="button" class="btn btn-primary" onclick=makeDir()> Create Folder </button>
 
   </form>
   </center>
