--- a/views/layouts/files.hbs
+++ b/views/layouts/files.hbs
@@ -20,9 +20,9 @@
     </div>
     <hr>
     <div class="container-fluid">
-        <button type="button" class="btn btn-primary disabled">Upload File</button>
+        <button type="button" class="btn btn-primary" onclick=upload()>Upload File</button>
         <button type="button" class="btn btn-primary disabled">Create File</button>
-        <button type="button" class="btn btn-primary">Create Folder</button>
+        <button type="button" class="btn btn-primary disabled">Create Folder</button>
     </div>
     <hr>
     <div class="container-fluid">
