--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -22,7 +22,7 @@
     <div class="container-fluid">
         <button type="button" class="btn btn-primary disabled">Upload File</button>
         <button type="button" class="btn btn-primary disabled">Create File</button>
-        <button type="button" class="btn btn-primary" onclick= "window.location.href = 'create_folder.html'">Create Folder</button>
+        <button type="button" class="btn btn-primary" onclick=createFolder() >Create Folder</button>
     </div>
     <hr>
     <div class="container-fluid">
