added message errors for login/register

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -78,6 +78,7 @@
 <body>
   <div class="login">
     <h>Register</h>
+    {{messages}}
       <form action="/reg" method="post">
           <div class="input">
             <span>Username</span> <input type="text" name="username" id="username" required>
