--- a/views/login.hbs
+++ b/views/login.hbs
@@ -78,9 +78,7 @@
 <body>
   <div class="login">
     <h>Login</h>
-    {{!-- <%if (messages.error) {%>
-      <%= messages.error%>
-    <%}%> --}}
+    {{messages.error}}
     <form action="/login" method="post">
       <div class="input">
         <span>Username</span> <input type="text" name="username" id="username" required>
